# Axon

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MODEL_SPEC.md  README.md  REVIEW.md  TASKS.md  claude.md  monitor.yaml  pyproject.toml  ruff.toml
.claude/: settings.local.json
docs/interfaces/: bill_of_materials.py  classified_wall_graph.py  constraint_signals.py  diffusion_output.py  drl_output.py  feasibility_report.py  graph_to_serializer.py  ifc_output.py  parser_to_tokenizer.py  physics_loss.py  tokenizer_to_diffusion.py  topology_loss.py
notebooks/: axon_layer1_demo.ipynb  axon_sft_diagnostic.ipynb  axon_training_colab.ipynb
scripts/: evaluate.sh  finetune.sh  monitor.sh  pretrain.sh  train_drl.sh
src/bom/: __init__.py  cfs_takeoff.py  costing.py  export.py  generator.py  pod_takeoff.py
src/classifier/: __init__.py  classifier.py  rules.py  taxonomy.py
src/constraints/: __init__.py  axioms.py  projector.py  sat_solver.py
src/diffusion/: __init__.py  forward.py  hdse.py  reverse.py  scheduler.py
src/drl/: __init__.py  actions.py  constraints.py  env.py  reward.py  state.py  train.py
src/feasibility/: __init__.py  blockers.py  calculator.py  report.py  suggestions.py
src/knowledge_graph/: __init__.py  loader.py  query.py  schema.py
src/monitor/: __init__.py  __main__.py  analyzer.py  callback.py  charts.py  config.py  decision.py  drive.py  orchestrator.py  poller.py  schemas.py  vision.py
src/optimization/: __init__.py  cutting_stock.py  global_cpsat.py  result_builder.py  solver.py
src/parser/: __init__.py  extractor.py  filters.py  graph_builder.py  operators.py
src/pipeline/: __init__.py  __main__.py  cli.py  config.py  full_pipeline.py  layer1.py  output.py
src/tokenizer/: __init__.py  cross_attention.py  vector_tokenizer.py  vision_backbone.py
src/training/: __init__.py  data_engine.py  drl_training.py  grpo.py  mpm.py  sft.py  sft_data.py  tracking.py
src/transplant/: __init__.py  assembler.py  ifc_export.py  matcher.py  openings.py
tests/benchmarks/: test_betti.py  test_drl_convergence.py  test_ged.py  test_hiou.py  test_spur.py
tests/diffusion/: test_hdse_shortest_path.py
tests/fixtures/: diffusion_helpers.py  graph_factory.py  pdf_factory.py
tests/integration/: test_capsule_pdfs.py  test_diffusion_pipeline.py  test_full_pipeline.py  (+4 more)
(+36 files in other folders)
