[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon"
version = "0.1.0"
description = "A Neuro-Symbolic and Physics-Informed Graph Diffusion Framework for Universal Vector-Native Wall Extraction in Architectural Floor Plans"
readme = "MODEL_SPEC.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tyler", email = "tyler@capsulemanufacturing.com" },
]

dependencies = [
    # PDF parsing
    "PyMuPDF>=1.24.0,<2.0",

    # Core ML
    "torch>=2.2.0,<3.0",
    "torchvision>=0.17.0,<1.0",

    # Graph neural networks
    "torch-geometric>=2.5.0,<3.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",

    # Physics / differentiable FEA
    "jax[cpu]>=0.4.25,<0.5",
    "jaxlib>=0.4.25,<0.5",

    # Persistent homology / algebraic topology
    "giotto-tda>=0.6.0,<1.0",
    "gudhi>=3.9.0,<4.0",

    # Vision backbone (HRNet / Swin via timm)
    "timm>=1.0.0,<2.0",

    # IFC serialization
    "ifcopenshell>=0.7.0",

    # Experiment tracking
    "wandb>=0.16.0,<1.0",

    # Operations Research (panelization optimization)
    "ortools>=9.8,<10.0",

    # Utilities
    "numpy>=1.26.0,<3.0",
    "scipy>=1.12.0,<2.0",
    "networkx>=3.2,<4.0",
    "pydantic>=2.6.0,<3.0",
    "click>=8.1.0,<9.0",
    "rich>=13.7.0,<14.0",
    "tqdm>=4.66.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0,<1.0",
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=5.0.0,<6.0",
    "pytest-xdist>=3.5.0,<4.0",
    "mypy>=1.9.0,<2.0",
    "pre-commit>=3.7.0,<4.0",
]
monitor = [
    "google-api-python-client>=2.100.0,<3.0",
    "google-auth>=2.25.0,<3.0",
    "matplotlib>=3.8.0,<4.0",
    "python-dotenv>=1.0.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "anthropic>=0.40.0,<1.0",
]

[project.scripts]
axon = "src.pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "benchmark: marks benchmark tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
